--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -25,7 +25,7 @@
 		height: 100%;
 		@include position($type: relative, $z: 2);
 		&, a {
-			color: $color-01;
+			color: $white-06;
 		}
 		.site-description, .site-quotes {
 			@include flex(base);
@@ -39,18 +39,18 @@
 				font-family: $font-03;
 				font-size: rem(100px);
 				font-variant: normal;
-				text-shadow: 2px 2px 0 rgba($color-02, 0.65);
+				text-shadow: 2px 2px 0 $dark-rgb-12;
 			}
 			h3 {
 				font-family: $font-02;
 				font-size: rem(28px);
-				text-shadow: 2px 1px 0 rgba($color-02, 0.65), 2px 1px 5px rgba($color-02, 0.75);
+				text-shadow: 2px 1px 0 $dark-rgb-12, 2px 1px 5px $dark-rgb-14;
 				letter-spacing: 2px;
 			}
 		}
 		.site-quotes {
 			font-family: $font-02;
-			text-shadow: 1px 1px 0 rgba($color-02, 0.65), 1px 1px 5px rgba($color-02, 0.75);
+			text-shadow: 1px 1px 0 $dark-rgb-12, 1px 1px 5px $dark-rgb-14;
 			font-size: rem($global-font-size);
 			p {
 				margin: 0 0 10px 0;
@@ -83,9 +83,9 @@
 			&:before {
 				content: '';
 				display: block;
-				background: $color-01;
+				background: $white-06;
 				@include sizing(100%, 100%);
-				box-shadow: 1px 1px 0 0 rgba($color-02, 0.30);
+				box-shadow: 1px 1px 0 0 $dark-rgb-06;
 			}
 		}
 	}
@@ -103,8 +103,8 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 ============================================== */
 
 .navbar {
-	background: rgba($color-05, 0.75);
-	border-bottom: 1px solid $color-04;
+	background: $other-rgb-00;
+	border-bottom: 1px solid $color-01;
 	@include position($type: fixed, $top: 0, $right: 0, $left: 0, $z: 999);
 	text-align: center;
 	padding: 10px 0;
@@ -117,7 +117,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 	}
 	a, .icon.fa-chevron-down {
 		&:hover {
-			color: $color-07;
+			color: $color-03;
 		}
 	}
 	.site-logo-text {
@@ -169,8 +169,8 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		}
 	}
 	&.sticky {
-		background: rgba($color-05, 1.0);
-		box-shadow: 0 4px 8px 0 rgba($color-02, .25);
+		background: $other-rgb-01;
+		box-shadow: 0 4px 8px 0 $dark-rgb-04;
 		.site-logo-text {
 			margin: 0 20px 0 0;
 			@include toggle-content(show);
@@ -207,7 +207,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 .user-menu {
 	.image-wrap {
 		@include sizing(30px, 30px);
-		border: 2px solid $color-04;
+		border: 2px solid $color-01;
 	}
 	.user-name, .user-avatar {
 		@include inline-block(middle);
@@ -223,15 +223,15 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		@include ellipsis;
 	}
 	.guest-info a {
-		color: $color-06;
+		color: $color-04;
 		&:hover {
-			color: $color-07;
+			color: $color-03;
 		}
 	}
 	.dropdown-container .dropdown-contents .linked-account-title {
 		margin: 7px 0 0 0;
 		padding: 10px 0 3px 0;
-		border-top: 1px dashed $color-04;
+		border-top: 1px dashed $color-01;
 	}
 	.linked-account a {
 		position: relative;
@@ -256,13 +256,13 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		padding: 10px 20px;
 	}
 	.header, .footer {
-		background: $color-04;
+		background: $color-01;
 		font-size: rem(15px);
 		&, a {
-			color: $color-01;
+			color: $white-01;
 		}
 		a:hover {
-			color: $color-07;
+			color: $color-03;
 		}
 	}
 	.header .header_settings, ul li {
@@ -284,7 +284,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		overflow-y: auto;
 		li {
 			position: relative;
-			border-bottom: 1px dashed $color-04;
+			border-bottom: 1px dashed $color-01;
 			&:last-child {
 				border-bottom: 0;
 			}
@@ -358,9 +358,9 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 			font-size: rem(40px);
 		}
 		.guest-name {
-			color: $color-06;
+			color: $color-04;
 			&:hover {
-				color: $color-07;
+				color: $color-03;
 			}
 		}
 	}
@@ -370,7 +370,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 			display: block;
 			width: 100%;
 			border-top-style: dashed;
-			border-top-color: $color-04;
+			border-top-color: $color-01;
 			border-top-width: 0;
 		}
 	}
@@ -396,7 +396,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 	@include inline-block(top);
 	@include sizing(20px, 20px);
 	line-height: 20px;
-	background-color: $color-11;
+	background-color: $color-08;
 	border-radius: 100%;
 	text-align: center;
 	font-weight: normal;
@@ -408,7 +408,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 }
 
 .badge, a:hover .badge {
-	color: $color-01;
+	color: $white-05;
 }
 
 /* Featured Content
@@ -431,11 +431,11 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 			margin: 0 0 10px 0;
 			a {
 				display: block;
-				border: 10px solid rgba($color-02, 0.30);
+				border: 10px solid $dark-rgb-07;
 				overflow: hidden;
 				color: $color-00;
 				&:hover {
-					color: $color-07;
+					color: $color-03;
 					img {
 						transform: scale(1.3,1.3);
 					}
@@ -448,7 +448,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 				height: 30px;
 				line-height: 30px;
 				@include ellipsis;
-				background: rgba($color-02, 0.60);
+				background: $dark-rgb-11;
 				text-align: center;
 			}
 			.featured-details {
@@ -499,17 +499,17 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 }
 
 #mobile-menu {
-	background: $color-05;
-	border-right: 1px solid mix($color-02, $color-04, 50%);
+	background: $color-02;
+	border-right: 1px solid $dark-mix-01;
 	@include position($type: fixed, $top: 0, $left: -($mobile-menu-width + 300), $z: 9999);
 	@include sizing($mobile-menu-width, 100%);
 	@include transition(left 0.3s ease-in-out);
 	&.show {
 		left: 0;
-		box-shadow: 7px 0 5px -2px rgba($color-02, 0.35);
+		box-shadow: 7px 0 5px -2px $dark-rgb-08;
 	}
 	&, a {
-		color: $color-01;
+		color: $white-07;
 	}
 	&, ul {
 		font-size: rem(16px);
@@ -524,8 +524,8 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		padding: 10px;
 	}
 	.menu .menu-label, .menu .dropdown-contents li, .menu .dropdown-contents > div {
-		border-top: 1px solid $color-04;
-		border-bottom: 1px solid mix($color-02, $color-04, 50%);
+		border-top: 1px solid $color-01;
+		border-bottom: 1px solid $dark-mix-01;
 	}
 	.mobile-menu-header .fa-times, .menu .menu-label .fa-chevron-down {
 		@include sizing(44px, 44px);
@@ -537,14 +537,14 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		cursor: pointer;
 	}
 	.mobile-menu-header {
-		border-bottom: 1px solid mix($color-02, $color-04, 50%);
+		border-bottom: 1px solid $dark-mix-01;
 		.mobile-header {
 			font-size: rem(24px);
 			@include spectral-common;
 		}
 	}
 	.mobile-menu-content {
-		border-bottom: 1px solid $color-04;
+		border-bottom: 1px solid $color-01;
 	}
 	.menu {
 		.menu-label .fa-chevron-down {
@@ -576,7 +576,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		.dropdown-visible {
 			.menu-label {
 				font-weight: bold;
-				background: mix($color-02, $color-05, 15%);
+				background: $dark-mix-02;
 				.fa-chevron-down {
 					transform: rotate(-180deg);
 				}
@@ -598,7 +598,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		}
 		.guest-info {
 			a {
-				color: $color-06;
+				color: $color-04;
 			}
 			.user-name {
 				max-width: 234px;
@@ -613,7 +613,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 			font-size: rem(14px);
 		}
 		.header, .footer {
-			background: $color-05;
+			background: $color-02;
 		}
 		.header {
 			font-size: 0;
