--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -80,15 +80,15 @@
 .browserupgrade {
 	@include position($type: fixed, $top: 0, $left: 0, $z: 100);
 	width: 100%;
-	background: $color-09;
-	border-bottom: 2px solid mix($color-02, $color-09, 33.33%);
+	background: $color-07;
+	border-bottom: 2px solid $dark-mix-07;
 	padding: 20px;
-	color: $color-08;
+	color: $color-06;
 	text-align: center;
 	a {
-		color: $color-07;
+		color: $color-03;
 		&:hover {
-			color: $color-06;
+			color: $color-04;
 		}
 	}
 	& + .wrap .navbar {
@@ -100,8 +100,8 @@
 ============================================== */
 
 .dropdown-container .dropdown, .atwho-container .atwho-view {
-	background: $color-05;
-	border: 1px solid $color-04;
+	background: $color-02;
+	border: 1px solid $color-01;
 	padding: 20px;
 }
 
@@ -118,7 +118,7 @@
 .dropdown-container .dropdown .dropdown-contents a, .atwho-container .atwho-view .atwho-view-ul li {
 	color: $color-00;
 	&:hover {
-		color: $color-07;
+		color: $color-03;
 	}
 }
 
@@ -191,13 +191,13 @@
 		}
 		&.cur {
 			background: none;
-			color: $color-07;
+			color: $color-03;
 		}
 	}
 }
 
 #phpbb .mention {
-	color: $color-23;
+	color: $color-20;
 	font-weight: normal;
 }
 
@@ -205,7 +205,7 @@
 ============================================== */
 
 .loading_indicator {
-	background: rgba($color-02, 0.65) url($images + 'loading.gif') center center no-repeat;
+	background: $dark-rgb-13 url($images + 'loading.gif') center center no-repeat;
 	border-radius: 5px;
 	display: none;
 	margin-top: -50px;
@@ -272,9 +272,9 @@
 ============================================== */
 
 .forabg, .forumbg, .post, .panel {
-	border: 20px solid rgba($color-02, 0.30);
+	border: 20px solid $dark-rgb-07;
 	.inner {
-		background: rgba($color-02, 0.20);
+		background: $dark-rgb-01;
 		margin: 1px;
 		padding: 20px 20px 0 20px;
 	}
@@ -310,7 +310,7 @@
 		}
 		&.active span {
 			display: inline-block;
-			color: $color-06;
+			color: $color-04;
 			font-weight: bold;
 		}
 		a {
@@ -324,7 +324,7 @@
 			&, & .icon {
 				@include transition(color 0.3s ease-in-out);
 				&:hover {
-					color: $color-07;
+					color: $color-03;
 					background: none;
 				}
 			}
@@ -528,7 +528,7 @@
 	.jumpbox-cat-link {
 		padding: 0 0 10px 0;
 		margin: 10px 0;
-		border-bottom: 1px dashed $color-04;
+		border-bottom: 1px dashed $color-01;
 		font-weight: bold;
 	}
 	&:first-child .jumpbox-cat-link {
@@ -562,7 +562,7 @@
 ============================================== */
 
 .caret {
-	border-left: 1px solid $color-01;
+	border-left: 1px solid $white-05;
 	padding: 0 0 0 8px;
 }
 
@@ -679,13 +679,13 @@
 				display: block;
 				white-space: nowrap;
 				padding: 5px 10px;
-				color: $color-01;
-				background: $color-10;
+				color: $white-05;
+				background: $color-05;
 				@include transition(background 0.3s ease-in-out);
 				border-radius: 3px 3px 0 0;
 			}
 			& > a:hover, &.activetab > a {
-				background: $color-04;
+				background: $color-01;
 			}
 			&.activetab > a, &.responsive-tab > .responsive-tab-link {
 				padding: 7px 12px;
@@ -711,11 +711,11 @@
 			@include sizing(16px, 2px);
 		}
 		&:before {
-			border-bottom: 2px solid $color-01;
-			border-top: 2px solid $color-01;
+			border-bottom: 2px solid $white-05;
+			border-top: 2px solid $white-05;
 		}
 		&:after {
-			border-bottom: 2px solid $color-01;
+			border-bottom: 2px solid $white-05;
 		}
 	}
 	.dropdown .dropdown-contents > li > a {
@@ -762,13 +762,13 @@ dl.details {
 .rpg-round-icon, .map-round-icon {
 	@include sizing($list-icon-size - 2px, $list-icon-size - 2px);
 	border-radius: 100%;
-	border: 1px solid mix($color-01, $color-04, 5%);
-	color: $color-01;
+	border: 1px solid $light-mix-01;
+	color: $white-03;
 }
 
 .rpg-round-icon {
 	line-height: $list-icon-size - 4px;
-	background: $color-04;
+	background: $color-01;
 	font-size: rem(18px);
 	text-align: center;
 }
@@ -780,28 +780,28 @@ dl.details {
 }
 
 .rpg-round-icon-green {
-	background: $color-10;
-	border: 1px solid mix($color-01, $color-10, 5%);
+	background: $color-05;
+	border: 1px solid $light-mix-03;
 }
 
 .rpg-round-icon-orange {
-	background: $color-19;
-	border: 1px solid mix($color-01, $color-19, 5%);
+	background: $color-16;
+	border: 1px solid $light-mix-06;
 }
 
 .rpg-round-icon-purple {
-	background: $color-21;
-	border: 1px solid mix($color-01, $color-21, 5%);
+	background: $color-18;
+	border: 1px solid $light-mix-08;
 }
 
 .rpg-round-icon-red {
-	background: $color-16;
-	border: 1px solid mix($color-01, $color-16, 5%);
+	background: $color-13;
+	border: 1px solid $light-mix-07;
 }
 
 .rpg-round-icon-yellow {
-	background: $color-20;
-	border: 1px solid mix($color-01, $color-20, 5%);
+	background: $color-17;
+	border: 1px solid $light-mix-09;
 }
 
 .map-round-icon {
@@ -828,10 +828,10 @@ dl.details {
 
 .postprofile dt.has-avatar .avatar-container > .avatar, #page-welcome .user-profile .user-avatar .image-wrap,
 .excerpt .excerpt-image .image-wrap, .styled-listing .topiclist > li.row dl[class*='forum'].has-forum-image dt .forum-image {
-	border: 5px solid $color-04;
+	border: 5px solid $color-01;
 	border-radius: 100%;
 	overflow: hidden;
-	box-shadow: 0 0 10px 5px rgba($color-02, 0.25);
+	box-shadow: 0 0 10px 5px $dark-rgb-05;
 	img {
 		width: 100%;
 	}
@@ -845,7 +845,7 @@ dl.details {
 }
 
 .pm .postprofile dt.has-avatar .avatar-container > .avatar {
-	box-shadow: 0 0 10px 5px rgba($color-02, 0.15);
+	box-shadow: 0 0 10px 5px $dark-rgb-00;
 }
 
 /* Positioned Images
