--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
@@ -6,7 +6,7 @@
 	height: 50px;
 	line-height: 50px;
 	padding: 0 20px;
-	background: rgba($color-02, 0.60);
+	background: $dark-rgb-11;
 }
 
 // Clearfix
