--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -673,7 +673,7 @@
 						}
 						.forumtitle {
 							@include black-bar(50px, -10px, -10px);
-							border-bottom: 1px dashed $color-04;
+							border-bottom: 1px dashed $color-01;
 							z-index: 2;
 							color: $color-00;
 							@include spectral-common;
@@ -681,7 +681,7 @@
 							font-weight: normal;
 							@include ellipsis;
 							&:hover {
-								color: $color-07;
+								color: $color-03;
 							}
 							& + br {
 								display: none;
@@ -835,7 +835,7 @@
 		}
 	}
 	#attach-panel #file-list-container table.table1 {
-		border-top: 1px dashed $color-04;
+		border-top: 1px dashed $color-01;
 		td.attach-status .file-status:before {
 			font-size: rem($global-font-size);
 		}
@@ -844,7 +844,7 @@
 	// profile.scss
 	.postprofile {
 		border-right: 0;
-		border-bottom: 1px dashed $color-04;
+		border-bottom: 1px dashed $color-01;
 		@include clearfix('&');
 		dt, .profile-rank, .profile-permissions {
 			text-align: left;
@@ -902,7 +902,7 @@
 	}
 	.banner.banner-vertical {
 		border: 0;
-	    border-bottom: 1px solid $color-04;
+	    border-bottom: 1px solid $color-01;
 		padding-bottom: 80%;
 		margin: -20px -20px 20px -20px;
 		img {
@@ -959,7 +959,7 @@
 					color: $color-00;
 					@include ellipsis;
 					&:hover {
-						color: $color-07;
+						color: $color-03;
 					}
 				}
 			}
@@ -1018,7 +1018,7 @@
 	// cp.scss
 	.cp-main {
 		table.table1 {
-			border-top: 1px dashed $color-04;
+			border-top: 1px dashed $color-01;
 		}
 		[id*='avatar_option_avatar_driver'] > p {
 			margin-left: 0;
@@ -1065,7 +1065,7 @@
 	.section-ucp-edit-notification-options .cp-main table.table1 tbody tr.big-column {
 		border: 0;
 		padding: 10px 20px;
-		background: $color-04;
+		background: $color-01;
 		margin-top: -1px;
 		td {
 			padding: 0;
@@ -1186,7 +1186,7 @@
 	}
 	.section-mcp-warnings .cp-main table.table1 td a[href*='user_notes'] {
 		@include position($type: relative, $left: -10px, $z: 2);
-		background: $color-05;
+		background: $color-02;
 	}
 
 	// header.scss
@@ -1566,7 +1566,7 @@
 	.excerpt .excerpt-image .image-wrap {
 		&[style*='sorcerer'], &[style*='summoner'], &[style*='bard'] {
 			background-position: center top;
-		}		
+		}
 	}
 	.section-page-map #tabs {
 		display: none;
@@ -1629,7 +1629,7 @@
 					margin-right: 0;
 					padding: 0 0 20px 0;
 					border-right: 0;
-					border-bottom: 1px dashed $color-04;
+					border-bottom: 1px dashed $color-01;
 					max-width: none;
 				}
 				.avatar {
@@ -2043,13 +2043,13 @@
 		}
 		&.sticky {
 			.site-logo-text {
-				border-bottom: 1px solid mix($color-02, $color-04, 50%);
+				border-bottom: 1px solid $dark-mix-01;
 				padding-bottom: 10px;
 				margin: 0;
 			}
 			.mobile-menu-button {
 				padding-top: 10px;
-				border-top: 1px solid $color-04;
+				border-top: 1px solid $color-01;
 			}
 		}
 	}
