--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/print.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/print.scss
@@ -9,6 +9,7 @@
 
 // Helpers
 @import 'variables';
+@import 'colors';
 @import 'mixins';
 
 * {
@@ -21,7 +22,7 @@ body {
 	font-size: 12pt;
 	line-height: 1.7;
 	font-weight: normal;
-	color: $color-02;
+	color: $black-03;
 }
 
 h1, h2, h3, h4, h5, h6, p, figure, dl, hr, blockquote, .content, .page-number, .codebox {
@@ -59,13 +60,13 @@ ul, ol {
 a {
 	&, &:link, &:visited, &:active {
 		text-decoration: underline;
-		color: $color-22;
+		color: $color-19;
 	}
 }
 
 hr {
 	border: 0;
-	border-bottom: 1px dashed $color-22;
+	border-bottom: 1px dashed $color-19;
 	background: none;
 	height: 1px;
 }
@@ -104,7 +105,7 @@ blockquote {
 		max-width: none;
 	}
 	cite {
-		border-bottom: 1px solid $color-22;
+		border-bottom: 1px solid $color-19;
 		font-weight: bold;
 		margin: 0 0 10px 0;
 		padding: 0 0 10px 0;
@@ -112,13 +113,13 @@ blockquote {
 }
 
 .codebox {
-	border: 1px solid $color-22;
+	border: 1px solid $color-19;
 	padding: 20px;
 	& > p {
 		font-weight: bold;
 		margin: -10px -20px 20px -20px;
 		padding: 0 10px 10px 20px;
-		border-bottom: 1px solid $color-22;
+		border-bottom: 1px solid $color-19;
 	}
 }
 
@@ -127,7 +128,7 @@ pre code {
 }
 
 #page-header {
-	border-bottom: 1px dashed $color-22;
+	border-bottom: 1px dashed $color-19;
 	margin: 0 0 20px 0;
 	padding: 0 0 20px 0;
 	h1, h2 {
