--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -169,7 +169,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		}
 	}
 	&.sticky {
-		background: $other-rgb-01;
+		background: $color-02;
 		box-shadow: 0 4px 8px 0 $dark-rgb-04;
 		.site-logo-text {
 			margin: 0 20px 0 0;
